[package]
name = "shrek"
version = "0.1.0"
authors = ["k3yavi <asrivastava@cs.stonybrook.edu>"]
edition = "2018"

[dependencies]
#debruijn = { git = "https://github.com/10XGenomics/rust-debruijn" }
debruijn = { path = "../rust-debruijn" }
bio = "0.27.0"
clap = "2.33.0"
pretty_env_logger = "0.3.0"
log = "0.4.6"
lazy_static = "1.3.0"
rayon = "1.0.3"

[dependencies.boomphf]
git = "https://github.com/10XGenomics/rust-boomphf"
branch = "master"
features = ["serde"]
